Exams/Exam_02/5-0-print_memory.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e2r3p4.42.fr
Darwin 15.6.0 x86_64
$> date
Fri Aug 18 21:22:50 CEST 2017
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 8.0.0 (clang-800.0.42.1)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 8.0.0 (clang-800.0.42.1)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2017/piscine-c-exam02/exam_20170818/tkeynes

= Git history ==================================================================
$> git -C /var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user log --pretty='%H - %an, %ad : %s'
f8b428301d511c1be32ba31a716373d2a751d5b3 - Exam 42, Fri Aug 18 21:22:35 2017 +0200 : memory
4be0739497e337790b1800441ea6cc1af49e00bb - Exam 42, Fri Aug 18 20:43:06 2017 +0200 : add rev words
0fa52bfb4296abdfc9b218a955e93e1f058ab4ac - Exam 42, Fri Aug 18 20:10:19 2017 +0200 : corrected
29ee407bfd2b69d8d3dd4b23f03b94c3f734bb1f - Exam 42, Fri Aug 18 20:06:31 2017 +0200 : prime
7958f17c640f1cedac0410a36d89d7aba6af4aa4 - Exam 42, Fri Aug 18 18:56:01 2017 +0200 : 02
7866429418d80b7d413567e5a4792078efa68ccd - Exam 42, Fri Aug 18 18:33:21 2017 +0200 : 01
bdbdfdf5bb1dadc2808e566d9828a1e75f819c81 - Exam 42, Fri Aug 18 18:23:32 2017 +0200 : 00
a5998837dcc8785554d388881a3bb991cf985d82 - Exam 42, Fri Aug 18 18:10:36 2017 +0200 : ex00
 
= Collected files ==========================================
$> ls -lAR /var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user
total 8
-rw-r--r--  1 deepthought  deepthought  1867 Aug 18 21:22 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Aug 18 21:22 add_prime_sum
drwxr-xr-x  3 deepthought  deepthought   102 Aug 18 21:22 aff_z
drwxr-xr-x  3 deepthought  deepthought   102 Aug 18 21:22 alpha_mirror
drwxr-xr-x  3 deepthought  deepthought   102 Aug 18 21:22 ft_strlen
drwxr-xr-x  3 deepthought  deepthought   102 Aug 18 21:22 print_memory
drwxr-xr-x  3 deepthought  deepthought   102 Aug 18 21:22 rev_wstr

/var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user/add_prime_sum:
total 8
-rw-r--r--  1 deepthought  deepthought  2101 Aug 18 21:22 add_prime_sum.c

/var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user/aff_z:
total 8
-rw-r--r--  1 deepthought  deepthought  963 Aug 18 21:22 aff_z.c

/var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user/alpha_mirror:
total 8
-rw-r--r--  1 deepthought  deepthought  1240 Aug 18 21:22 alpha_mirror.c

/var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user/ft_strlen:
total 8
-rw-r--r--  1 deepthought  deepthought  1012 Aug 18 21:22 ft_strlen.c

/var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user/print_memory:
total 8
-rw-r--r--  1 deepthought  deepthought  1264 Aug 18 21:22 print_memory.c

/var/folders/_h/xtrqlrvs2yz8nzd2q93kmn040000gq/T/tmpuB5PVP/user/rev_wstr:
total 8
-rw-r--r--  1 deepthought  deepthought  2044 Aug 18 21:22 rev_wstr.c
 
= print_memory =================================================================
$> clang -Wextra -Wall -Werror print_memory.c main.c -o user_exe 
print_memory.c:24:14: error: operand of type 'const void' where arithmetic or pointer type is required
                if (((char)(*(addr + counter))) >= 33 && ((char)(*(addr + counter))) <= 126)
                           ^~~~~~~~~~~~~~~~~~~
print_memory.c:24:51: error: operand of type 'const void' where arithmetic or pointer type is required
                if (((char)(*(addr + counter))) >= 33 && ((char)(*(addr + counter))) <= 126)
                                                                ^~~~~~~~~~~~~~~~~~~
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
